# bitchat-node-daemon

./: .opencode_ses.json  Dockerfile  README.md  config.yaml  docker-compose.yml  export.json  install.sh  pyproject.toml
bitchat/: __init__.py  protocol.py
bitchat_node_daemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
daemon/: __init__.py  __main__.py  api.py  config.py  discovery.py  mesh.py  transport.py  ws.py
