[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitchat-node-daemon"
version = "0.1.0"
description = "TCP-based BitChat node daemon – decentralized, encrypted mesh messaging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "bitchat" },
]

dependencies = [
    "cryptography>=41.0",
    "lz4>=4.0",
    "pybloom_live>=4.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ble = ["bleak>=0.21", "aioconsole>=0.7"]
mdns = ["zeroconf>=0.131"]
all = ["bitchat-node-daemon[ble,mdns]"]

[tool.setuptools.packages.find]
include = ["bitchat*", "daemon*"]

[project.urls]
Homepage = "https://github.com/luca/bitchat-node-daemon"
